[package]
name = "rtlil_frontend"
version = "0.1.0"
description = "RTLIL (yosys) parser for rust"
license = "MIT"
authors = ["xhe <xw897002528@gmail.com>",
           "Yehowshua <programmed4jesus@gmail.com>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
anyhow = "^1.0"
getset = "^0.1"
lalrpop-util = "^0.19"
log = "^0.4"
env_logger = "^0.7"
bitflags = "^1.2"
